<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/preto_tom_secundario"
    android:background="@drawable/borda_arredondada_caixa"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
    android:id="@+id/llMidia"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_constraintEnd_toStartOf="@id/llInfoEmprestimo"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/imagem_item"
        android:src="@drawable/img_livro_teste"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:paddingTop="10dp"
        android:text="@string/titulo_item"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/autor_item"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="12sp" />
</LinearLayout>
    <LinearLayout
        android:id="@+id/llInfoEmprestimo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llMidia"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dtEmprestimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/dt_emprestimo"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dtDevolucao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dt_devolucao"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/numDevolucoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/aviso_item_emprestimo"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/btnRenovar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/botao_layout_borda_cor"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="45dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            tools:ignore="TouchTargetSizeCheck">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:contentDescription="@string/icone_renovar"
                android:minWidth="15dp"
                android:minHeight="26dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_renovar" />

            <!-- Linha separadora -->
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:background="?attr/colorOnSurface" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:text="@string/btnRenovar"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnSurface"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>